Packages/deploy/LoadBalancer/@Attempt7/entry_point_service.yaml
apiVersion: v1
kind: Service
metadata:
  #name: entry-point-service
  name: ngf-nginx-gateway-fabric
  namespace: default
  labels:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.0.0"
    #app.kubernetes.io/name: "nginx-gateway-fabric"
    #app.kubernetes.io/instance: "ngf"
  # annotations:
  #   meta.helm.sh/release-name: "release-test-1"
  #   meta.helm.sh/release-namespace: "default"
spec:
  type: TILT_PLACEHOLDER:service_type
  selector:
    #app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: ngf
  ports:
  - name: http
    protocol: TCP
    port: TILT_PLACEHOLDER:http_port
    targetPort: 80
  - name: https
    protocol: TCP
    port: TILT_PLACEHOLDER:https_port
    targetPort: 443
  "TILT_PLACEHOLDER:externalIPs":
    - TILT_PLACEHOLDER:bind_to_address
  ## The externalTrafficPolicy of the service. The value Local preserves the client source IP.
  externalTrafficPolicy: Local
  #internalTrafficPolicy: Local
