Packages/deploy/LoadBalancer/@Attempt7/node_port_service.yaml
---
# Source: nginx-gateway-fabric/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-node-port
  namespace: default
  labels:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.0.0"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
  ports: # Update the following ports to match your Gateway Listener ports
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 80
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 443
