Packages/deploy/LoadBalancer/@Attempt7/gateway-manual.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS # Other possible value is `TLS`
    port: 443
    tls:
      mode: Terminate # If protocol is `TLS`, `Passthrough` is a possible mode
      certificateRef:
        kind: Secret
        group: ""
        name: zerossl-key-prod
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "9m2x1z.nodes.c1.or1.k8s.ovh.us"
  - "debating.app"
  - "debates.app"
  rules:
  - backendRefs:
    - name: dm-web-server
      port: 5100
    - name: dm-app-server-rs
      port: 5110
    - name: dm-app-server-js
      port: 5115
    - name: dm-monitor-backend
      port: 5130
